# Physics

./: .gitignore  README.md
Xe_280Mev_2026/Stack_01/: Emulsion_Analysis.C
Xe_280Mev_2026/Stack_01/Beam_Profile_Stack_01/: Emulsion_Analysis.C
Xe_280Mev_2026/Stack_01/Results_Files/: 7_Plate_03_Results.csv  8_Plate_02_Results.csv
Xe_280Mev_2026/Stack_01/Summary_Files/: 1_Plate_09_Summary.csv  2_Plate_08_Summary.csv  3_Plate_07_Summary.csv  5_Plate_05_Summary.csv  6_Plate_04_Summary.csv  8_Plate_02_Summary.csv
Xe_280Mev_2026/Stack_02/: GeneratePlots.C  Macro2.ijm
Xe_280Mev_2026/Stack_02/Results_Files/: 10_Plate_001_Results.csv
Xe_280Mev_2026/Stack_02/Summary_Files/: 10_Plate_001_Summary.csv  1_Plate-0001_Summary.csv  2_Plate-0001_Summary.csv  3_Plate-0001_Summary.csv  4_Plate-0001_Summary.csv  5_Plate-0001_Summary.csv  6_Plate-0001_Summary.csv  (+3 more)
Xe_280Mev_2026/Stack_03/: GeneratePlots.C  Macro3.ijm
Xe_280Mev_2026/analysis/: Finalreport.tex  analysis.py  beam_profile_params.csv  beam_profile_params.py  bragg_data.csv  gen_3d_stack.py  particle_classes.csv  plot_bragg.C  plot_class2.C  presentation_guide.tex  report.tex  srim_10plate_bragg.csv  srim_10plate_bragg_simple.csv
Xe_280Mev_2026/analysis/geant4/: CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  EventAction.cc  EventAction.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RunAction.cc  RunAction.hh  SteppingAction.cc  SteppingAction.hh  XeEmulsionSim.cc  plot_bragg.py  plot_comparison.py  plot_report.py  run_test.mac  vis.mac  vis_offscreen.mac  vis_trace.mac  vis_vrml.mac
(+29 files in other folders)
